@startuml CloudWarehouse_Billing_Strategy_Pattern
title Billing Strategy Pattern (Implemented) — Class Diagram

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

package "CloudWarehouse.Pricing.Core / Billing" {

  class BillingContext {
    + Weight : decimal
    + ActiveRules : IReadOnlyList<PriceRule>
    + LengthCm / WidthCm / HeightCm : decimal?
    + VolumetricDivisor : decimal
    + VolumetricWeightKg : decimal?
  }

  interface IBillingStrategy {
    + StrategyName : string
    + CanHandle(context) : bool
    + Calculate(context) : PriceCalculateResult?
  }

  class TierBillingStrategy {
    + StrategyName = "区间计费(≤5kg)"
  }

  class OverweightBillingStrategy {
    + StrategyName = "续重计费(>5kg)"
  }

  class VolumetricBillingStrategy {
    + StrategyName = "体积重计费"
    note: when vol weight > physical,\ncharge using max weight via tier/over
  }

  interface IBillingStrategyResolver {
    + Resolve(context) : IBillingStrategy?
    + RegisteredStrategyNames : IReadOnlyList<string>
  }

  class DefaultBillingStrategyResolver {
    + Resolve(context) : IBillingStrategy?
    + CreateDefault() : resolver
  }

  class FeeCalculationEngine {
    + Calculate(rules, weight, orderDate, dims?)
    + CalculateActive(rules, weight, dims?)
  }

  class FeeRuleCalculator <<static facade>> {
    {static} + Calculate(...)
    {static} + CalculateActive(...)
  }

  class DualTrackFeeCalculator <<application>> {
    + CalculateAsync(WaybillImportRow)
  }

  note as Future <<planned>>
    Further strategies (still Open/Closed):
    - StepBillingStrategy
    - IrregularParcelStrategy
    Register in CreateDefault / DI only.
  end note
}

IBillingStrategy <|.. TierBillingStrategy
IBillingStrategy <|.. OverweightBillingStrategy
IBillingStrategy <|.. VolumetricBillingStrategy
IBillingStrategyResolver <|.. DefaultBillingStrategyResolver
DefaultBillingStrategyResolver --> IBillingStrategy : selects (order)
FeeCalculationEngine --> IBillingStrategyResolver
FeeRuleCalculator --> FeeCalculationEngine : delegates
DualTrackFeeCalculator ..> FeeCalculationEngine : via cost/quote services
IBillingStrategy --> BillingContext : uses
IBillingStrategy ..> PriceCalculateResult : returns
VolumetricBillingStrategy ..> TierBillingStrategy : delegates chargeable
VolumetricBillingStrategy ..> OverweightBillingStrategy : delegates chargeable
Future .. DefaultBillingStrategyResolver

' --- Presentation script (EN) ---
' 1. Fee calculation uses Strategy Pattern: Tier, Overweight, and Volumetric.
' 2. Volumetric proves Open/Closed: new class + DI registration, callers unchanged.
' 3. Dual-track billing still uses FeeCalculationEngine as system of record.

@enduml
